gramatics/gramaticas/gramaticaAntlrParser.py
# Generated from ./gramatics/gramaticas/gramaticaAntlr.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys





class gramaticaAntlrParser ( Parser ):

    grammarFileName = "gramaticaAntlr.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'int'", "'string'", "'float'", "'break'", 
                     "';'", "'='", "'print'", "'{'", "'}'", "'['", "']'", 
                     "'read'", "'return'", "'('", "')'", "'if'", "'else'", 
                     "'for'", "'null'", "'new'" ]

    symbolicNames = [ "<INVALID>", "INT", "STRING", "FLOAT", "BREAK", "ENDLINE", 
                      "EQUAL", "PRINT", "CHAVEA", "CHAVEF", "COLCHA", "COLCHF", 
                      "READ", "RETURN", "PARENTEA", "PARENTEF", "IF", "ELSE", 
                      "FOR", "NULL", "NEW", "COMPARADORES", "MAISOUMENOS", 
                      "MDP", "IDENT", "INT_CONSTANT", "FLOAT_CONSTANT", 
                      "STRING_CONSTANT", "WS" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_vardecl = 2
    RULE_a = 3
    RULE_b = 4
    RULE_atribstat = 5
    RULE_printstat = 6
    RULE_readstat = 7
    RULE_returnstat = 8
    RULE_ifstat = 9
    RULE_forstat = 10
    RULE_statelist = 11
    RULE_allocexpression = 12
    RULE_c = 13
    RULE_expression = 14
    RULE_numexpression = 15
    RULE_n = 16
    RULE_term = 17
    RULE_e = 18
    RULE_unaryexpr = 19
    RULE_factor = 20
    RULE_lvalue = 21
    RULE_g = 22

    ruleNames =  [ "program", "statement", "vardecl", "a", "b", "atribstat", 
                   "printstat", "readstat", "returnstat", "ifstat", "forstat", 
                   "statelist", "allocexpression", "c", "expression", "numexpression", 
                   "n", "term", "e", "unaryexpr", "factor", "lvalue", "g" ]

    EOF = Token.EOF
    INT=1
    STRING=2
    FLOAT=3
    BREAK=4
    ENDLINE=5
    EQUAL=6
    PRINT=7
    CHAVEA=8
    CHAVEF=9
    COLCHA=10
    COLCHF=11
    READ=12
    RETURN=13
    PARENTEA=14
    PARENTEF=15
    IF=16
    ELSE=17
    FOR=18
    NULL=19
    NEW=20
    COMPARADORES=21
    MAISOUMENOS=22
    MDP=23
    IDENT=24
    INT_CONSTANT=25
    FLOAT_CONSTANT=26
    STRING_CONSTANT=27
    WS=28

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(gramaticaAntlrParser.StatementContext,0)


        def getRuleIndex(self):
            return gramaticaAntlrParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = gramaticaAntlrParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.state = 48
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [gramaticaAntlrParser.INT, gramaticaAntlrParser.STRING, gramaticaAntlrParser.FLOAT, gramaticaAntlrParser.BREAK, gramaticaAntlrParser.ENDLINE, gramaticaAntlrParser.PRINT, gramaticaAntlrParser.CHAVEA, gramaticaAntlrParser.READ, gramaticaAntlrParser.RETURN, gramaticaAntlrParser.IF, gramaticaAntlrParser.FOR, gramaticaAntlrParser.IDENT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 46
                self.statement()
                pass
            elif token in [gramaticaAntlrParser.EOF]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(gramaticaAntlrParser.VardeclContext,0)


        def ENDLINE(self):
            return self.getToken(gramaticaAntlrParser.ENDLINE, 0)

        def atribstat(self):
            return self.getTypedRuleContext(gramaticaAntlrParser.AtribstatContext,0)


        def printstat(self):
            return self.getTypedRuleContext(gramaticaAntlrParser.PrintstatContext,0)


        def readstat(self):
            return self.getTypedRuleContext(gramaticaAntlrParser.ReadstatContext,0)


        def returnstat(self):
            return self.getTypedRuleContext(gramaticaAntlrParser.ReturnstatContext,0)


        def ifstat(self):
            return self.getTypedRuleContext(gramaticaAntlrParser.IfstatContext,0)


        def forstat(self):
            return self.getTypedRuleContext(gramaticaAntlrParser.ForstatContext,0)


        def CHAVEA(self):
            return self.getToken(gramaticaAntlrParser.CHAVEA, 0)

        def statelist(self):
            return self.getTypedRuleContext(gramaticaAntlrParser.StatelistContext,0)


        def CHAVEF(self):
            return self.getToken(gramaticaAntlrParser.CHAVEF, 0)

        def BREAK(self):
            return self.getToken(gramaticaAntlrParser.BREAK, 0)

        def getRuleIndex(self):
            return gramaticaAntlrParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = gramaticaAntlrParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 74
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [gramaticaAntlrParser.INT, gramaticaAntlrParser.STRING, gramaticaAntlrParser.FLOAT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 50
                self.vardecl()
                self.state = 51
                self.match(gramaticaAntlrParser.ENDLINE)
                pass
            elif token in [gramaticaAntlrParser.IDENT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 53
                self.atribstat()
                self.state = 54
                self.match(gramaticaAntlrParser.ENDLINE)
                pass
            elif token in [gramaticaAntlrParser.PRINT]:
                self.enterOuterAlt(localctx, 3)
                self.state = 56
                self.printstat()
                self.state = 57
                self.match(gramaticaAntlrParser.ENDLINE)
                pass
            elif token in [gramaticaAntlrParser.READ]:
                self.enterOuterAlt(localctx, 4)
                self.state = 59
                self.readstat()
                self.state = 60
                self.match(gramaticaAntlrParser.ENDLINE)
                pass
            elif token in [gramaticaAntlrParser.RETURN]:
                self.enterOuterAlt(localctx, 5)
                self.state = 62
                self.returnstat()
                self.state = 63
                self.match(gramaticaAntlrParser.ENDLINE)
                pass
            elif token in [gramaticaAntlrParser.IF]:
                self.enterOuterAlt(localctx, 6)
                self.state = 65
                self.ifstat()
                pass
            elif token in [gramaticaAntlrParser.FOR]:
                self.enterOuterAlt(localctx, 7)
                self.state = 66
                self.forstat()
                pass
            elif token in [gramaticaAntlrParser.CHAVEA]:
                self.enterOuterAlt(localctx, 8)
                self.state = 67
                self.match(gramaticaAntlrParser.CHAVEA)
                self.state = 68
                self.statelist()
                self.state = 69
                self.match(gramaticaAntlrParser.CHAVEF)
                pass
            elif token in [gramaticaAntlrParser.BREAK]:
                self.enterOuterAlt(localctx, 9)
                self.state = 71
                self.match(gramaticaAntlrParser.BREAK)
                self.state = 72
                self.match(gramaticaAntlrParser.ENDLINE)
                pass
            elif token in [gramaticaAntlrParser.ENDLINE]:
                self.enterOuterAlt(localctx, 10)
                self.state = 73
                self.match(gramaticaAntlrParser.ENDLINE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VardeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def a(self):
            return self.getTypedRuleContext(gramaticaAntlrParser.AContext,0)


        def IDENT(self):
            return self.getToken(gramaticaAntlrParser.IDENT, 0)

        def b(self):
            return self.getTypedRuleContext(gramaticaAntlrParser.BContext,0)


        def getRuleIndex(self):
            return gramaticaAntlrParser.RULE_vardecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVardecl" ):
                listener.enterVardecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVardecl" ):
                listener.exitVardecl(self)




    def vardecl(self):

        localctx = gramaticaAntlrParser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_vardecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.a()
            self.state = 77
            self.match(gramaticaAntlrParser.IDENT)
            self.state = 78
            self.b()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(gramaticaAntlrParser.INT, 0)

        def FLOAT(self):
            return self.getToken(gramaticaAntlrParser.FLOAT, 0)

        def STRING(self):
            return self.getToken(gramaticaAntlrParser.STRING, 0)

        def getRuleIndex(self):
            return gramaticaAntlrParser.RULE_a

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterA" ):
                listener.enterA(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitA" ):
                listener.exitA(self)




    def a(self):

        localctx = gramaticaAntlrParser.AContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_a)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << gramaticaAntlrParser.INT) | (1 << gramaticaAntlrParser.STRING) | (1 << gramaticaAntlrParser.FLOAT))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COLCHA(self):
            return self.getToken(gramaticaAntlrParser.COLCHA, 0)

        def INT_CONSTANT(self):
            return self.getToken(gramaticaAntlrParser.INT_CONSTANT, 0)

        def COLCHF(self):
            return self.getToken(gramaticaAntlrParser.COLCHF, 0)

        def b(self):
            return self.getTypedRuleContext(gramaticaAntlrParser.BContext,0)


        def getRuleIndex(self):
            return gramaticaAntlrParser.RULE_b

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterB" ):
                listener.enterB(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitB" ):
                listener.exitB(self)




    def b(self):

        localctx = gramaticaAntlrParser.BContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_b)
        try:
            self.state = 90
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 82
                self.match(gramaticaAntlrParser.COLCHA)
                self.state = 83
                self.match(gramaticaAntlrParser.INT_CONSTANT)
                self.state = 84
                self.match(gramaticaAntlrParser.COLCHF)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 85
                self.match(gramaticaAntlrParser.COLCHA)
                self.state = 86
                self.match(gramaticaAntlrParser.INT_CONSTANT)
                self.state = 87
                self.match(gramaticaAntlrParser.COLCHF)
                self.state = 88
                self.b()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AtribstatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lvalue(self):
            return self.getTypedRuleContext(gramaticaAntlrParser.LvalueContext,0)


        def EQUAL(self):
            return self.getToken(gramaticaAntlrParser.EQUAL, 0)

        def expression(self):
            return self.getTypedRuleContext(gramaticaAntlrParser.ExpressionContext,0)


        def allocexpression(self):
            return self.getTypedRuleContext(gramaticaAntlrParser.AllocexpressionContext,0)


        def getRuleIndex(self):
            return gramaticaAntlrParser.RULE_atribstat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtribstat" ):
                listener.enterAtribstat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtribstat" ):
                listener.exitAtribstat(self)




    def atribstat(self):

        localctx = gramaticaAntlrParser.AtribstatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_atribstat)
        try:
            self.state = 100
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 92
                self.lvalue()
                self.state = 93
                self.match(gramaticaAntlrParser.EQUAL)
                self.state = 94
                self.expression()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 96
                self.lvalue()
                self.state = 97
                self.match(gramaticaAntlrParser.EQUAL)
                self.state = 98
                self.allocexpression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PrintstatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(gramaticaAntlrParser.PRINT, 0)

        def expression(self):
            return self.getTypedRuleContext(gramaticaAntlrParser.ExpressionContext,0)


        def getRuleIndex(self):
            return gramaticaAntlrParser.RULE_printstat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintstat" ):
                listener.enterPrintstat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintstat" ):
                listener.exitPrintstat(self)




    def printstat(self):

        localctx = gramaticaAntlrParser.PrintstatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_printstat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(gramaticaAntlrParser.PRINT)
            self.state = 103
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ReadstatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def READ(self):
            return self.getToken(gramaticaAntlrParser.READ, 0)

        def lvalue(self):
            return self.getTypedRuleContext(gramaticaAntlrParser.LvalueContext,0)


        def getRuleIndex(self):
            return gramaticaAntlrParser.RULE_readstat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReadstat" ):
                listener.enterReadstat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReadstat" ):
                listener.exitReadstat(self)




    def readstat(self):

        localctx = gramaticaAntlrParser.ReadstatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_readstat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(gramaticaAntlrParser.READ)
            self.state = 106
            self.lvalue()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ReturnstatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(gramaticaAntlrParser.RETURN, 0)

        def getRuleIndex(self):
            return gramaticaAntlrParser.RULE_returnstat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnstat" ):
                listener.enterReturnstat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnstat" ):
                listener.exitReturnstat(self)




    def returnstat(self):

        localctx = gramaticaAntlrParser.ReturnstatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_returnstat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(gramaticaAntlrParser.RETURN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IfstatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(gramaticaAntlrParser.IF, 0)

        def PARENTEA(self):
            return self.getToken(gramaticaAntlrParser.PARENTEA, 0)

        def expression(self):
            return self.getTypedRuleContext(gramaticaAntlrParser.ExpressionContext,0)


        def PARENTEF(self):
            return self.getToken(gramaticaAntlrParser.PARENTEF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaAntlrParser.StatementContext)
            else:
                return self.getTypedRuleContext(gramaticaAntlrParser.StatementContext,i)


        def ELSE(self):
            return self.getToken(gramaticaAntlrParser.ELSE, 0)

        def getRuleIndex(self):
            return gramaticaAntlrParser.RULE_ifstat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfstat" ):
                listener.enterIfstat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfstat" ):
                listener.exitIfstat(self)




    def ifstat(self):

        localctx = gramaticaAntlrParser.IfstatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_ifstat)
        try:
            self.state = 124
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 110
                self.match(gramaticaAntlrParser.IF)
                self.state = 111
                self.match(gramaticaAntlrParser.PARENTEA)
                self.state = 112
                self.expression()
                self.state = 113
                self.match(gramaticaAntlrParser.PARENTEF)
                self.state = 114
                self.statement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 116
                self.match(gramaticaAntlrParser.IF)
                self.state = 117
                self.match(gramaticaAntlrParser.PARENTEA)
                self.state = 118
                self.expression()
                self.state = 119
                self.match(gramaticaAntlrParser.PARENTEF)
                self.state = 120
                self.statement()
                self.state = 121
                self.match(gramaticaAntlrParser.ELSE)
                self.state = 122
                self.statement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ForstatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(gramaticaAntlrParser.FOR, 0)

        def PARENTEA(self):
            return self.getToken(gramaticaAntlrParser.PARENTEA, 0)

        def atribstat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaAntlrParser.AtribstatContext)
            else:
                return self.getTypedRuleContext(gramaticaAntlrParser.AtribstatContext,i)


        def ENDLINE(self, i:int=None):
            if i is None:
                return self.getTokens(gramaticaAntlrParser.ENDLINE)
            else:
                return self.getToken(gramaticaAntlrParser.ENDLINE, i)

        def expression(self):
            return self.getTypedRuleContext(gramaticaAntlrParser.ExpressionContext,0)


        def PARENTEF(self):
            return self.getToken(gramaticaAntlrParser.PARENTEF, 0)

        def statement(self):
            return self.getTypedRuleContext(gramaticaAntlrParser.StatementContext,0)


        def getRuleIndex(self):
            return gramaticaAntlrParser.RULE_forstat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForstat" ):
                listener.enterForstat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForstat" ):
                listener.exitForstat(self)




    def forstat(self):

        localctx = gramaticaAntlrParser.ForstatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_forstat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(gramaticaAntlrParser.FOR)
            self.state = 127
            self.match(gramaticaAntlrParser.PARENTEA)
            self.state = 128
            self.atribstat()
            self.state = 129
            self.match(gramaticaAntlrParser.ENDLINE)
            self.state = 130
            self.expression()
            self.state = 131
            self.match(gramaticaAntlrParser.ENDLINE)
            self.state = 132
            self.atribstat()
            self.state = 133
            self.match(gramaticaAntlrParser.PARENTEF)
            self.state = 134
            self.statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatelistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(gramaticaAntlrParser.StatementContext,0)


        def statelist(self):
            return self.getTypedRuleContext(gramaticaAntlrParser.StatelistContext,0)


        def getRuleIndex(self):
            return gramaticaAntlrParser.RULE_statelist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatelist" ):
                listener.enterStatelist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatelist" ):
                listener.exitStatelist(self)




    def statelist(self):

        localctx = gramaticaAntlrParser.StatelistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_statelist)
        try:
            self.state = 140
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 136
                self.statement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 137
                self.statement()
                self.state = 138
                self.statelist()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AllocexpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEW(self):
            return self.getToken(gramaticaAntlrParser.NEW, 0)

        def a(self):
            return self.getTypedRuleContext(gramaticaAntlrParser.AContext,0)


        def c(self):
            return self.getTypedRuleContext(gramaticaAntlrParser.CContext,0)


        def getRuleIndex(self):
            return gramaticaAntlrParser.RULE_allocexpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAllocexpression" ):
                listener.enterAllocexpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAllocexpression" ):
                listener.exitAllocexpression(self)




    def allocexpression(self):

        localctx = gramaticaAntlrParser.AllocexpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_allocexpression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.match(gramaticaAntlrParser.NEW)
            self.state = 143
            self.a()
            self.state = 144
            self.c()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COLCHA(self):
            return self.getToken(gramaticaAntlrParser.COLCHA, 0)

        def expression(self):
            return self.getTypedRuleContext(gramaticaAntlrParser.ExpressionContext,0)


        def COLCHF(self):
            return self.getToken(gramaticaAntlrParser.COLCHF, 0)

        def c(self):
            return self.getTypedRuleContext(gramaticaAntlrParser.CContext,0)


        def getRuleIndex(self):
            return gramaticaAntlrParser.RULE_c

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterC" ):
                listener.enterC(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitC" ):
                listener.exitC(self)




    def c(self):

        localctx = gramaticaAntlrParser.CContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_c)
        try:
            self.state = 155
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 146
                self.match(gramaticaAntlrParser.COLCHA)
                self.state = 147
                self.expression()
                self.state = 148
                self.match(gramaticaAntlrParser.COLCHF)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 150
                self.match(gramaticaAntlrParser.COLCHA)
                self.state = 151
                self.expression()
                self.state = 152
                self.match(gramaticaAntlrParser.COLCHF)
                self.state = 153
                self.c()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def numexpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaAntlrParser.NumexpressionContext)
            else:
                return self.getTypedRuleContext(gramaticaAntlrParser.NumexpressionContext,i)


        def COMPARADORES(self):
            return self.getToken(gramaticaAntlrParser.COMPARADORES, 0)

        def getRuleIndex(self):
            return gramaticaAntlrParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):
